# CodeAtlas

./: .gitignore  AGENTS.md  Milestone1_TrustworthyLookup.md  Milestone2_RealImpactNavigation.md  Milestone3_ProductionGradeIncrementalOperation.md  Milestone5_PerformanceProof.md  NestTask.md  README.md  TASK.md  dy  eval_opencv.py  setup-gui.ps1  setup-gui.sh  smoke_test.py
dev_docs/: AGENT_WORKFLOW.md  API_CONTRACT.md  BenchmarkPlan.md  CompletedTask.md  GroundTruthRegressionSuite.md  Improve_Indexer.md  IncrementalCorrectnessMatrix.md  Kythe_Glean_Applicability_Review.md  Milestone10_AgentInvestigationWorkflow.md  Milestone11_DanglingReferenceQuality.md  Milestone12_QueryUsabilityAndCoverageSignals.md  Milestone13_WatcherBurstResilience.md  Milestone14_VersionedDatabasePublishing.md  Milestone15_MacroSensitiveCoverageAndDisambiguation.md  Milestone16_ScaleAwareIncrementalIntelligence.md  Milestone1_TrustworthyLookup.md  (+43 more)
indexer/: Cargo.toml
indexer/examples/: query_db.rs
indexer/graph/: cpp_call_relations.tsg  lua_call_relations.tsg  python_call_relations.tsg  rust_call_relations.tsg  typescript_call_relations.tsg
indexer/src/: activity_log.rs  build_metadata.rs  clang_parser.rs  compile_commands.rs  constants.rs  cpp_context.rs  cross_flow.rs  discovery.rs  graph_rules.rs  ignore.rs  incremental.rs  index_lock.rs  indexing.rs  language.rs  lua_parser.rs  main.rs  metadata.rs  models.rs  parse_cache.rs  parser.rs  python_parser.rs  representative_rules.rs  resolver.rs  retry.rs  rust_parser.rs  storage.rs  summary.rs  typescript_parser.rs  vcxproj.rs  watcher.rs
(+174 files in other folders)
